It does something now

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
          </select>
       </h1>
 
+      <script src="data.js"></script>
       <script src="script.js"></script>
 </body>
 </html>
